--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,11 @@ img {
     SOLUZIONE RESPONSIVE
  ************************************************/
 
-
+ @media screen and (max-width: 1140px) {
+    .container {
+        max-width: 100%;
+    }
+}
 
 
 
