--- a/css/style.css
+++ b/css/style.css
@@ -131,8 +131,42 @@ img {
  @media screen and (max-width: 1140px) {
     .container {
         max-width: 100%;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+    
+/************************************************
+           MOBILE
+ ************************************************/
+
+ @media screen and (max-width: 480px) {
+    .row {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .lessons .col {
+        width: 100%;
+        padding-bottom: 50px;
+    }
+    
+    .steps .col {
+        width: 100%;
+        padding-bottom: 50px;
+    }
+    
+    .why-us{
+        background-color: #222222;
+        margin-bottom: 0;
+    }
+
+    .why-us .col-left{
+        width: 100%;
+        padding-bottom: 50px;
+    }
+
+    .why-us .col-right{
+        width: 100%;
     }
 }
-
-
-
